syntax = "proto3";

package fileservice;
option go_package = "./proto";

service FileService {
  rpc UploadFile (stream FileChunk) returns (UploadResponse);
  rpc DownloadFile (FileRequest) returns (stream FileChunk);
  rpc ListFiles (ListRequest) returns (ListResponse);
}

message FileChunk {
  string filename = 1;
  bytes content = 2;
}

message FileRequest {
  string filename = 1;
}

message UploadResponse {
  string message = 1;
}

message ListRequest {}

message FileInfo {
  string filename = 1;
  int64 created_at = 2;
  int64 updated_at = 3;
}

message ListResponse {
  repeated FileInfo files = 1;
}